# TaskForge

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SETUP.md  THEORY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  walkthrough.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  main.py  metrics.py  models.py  schemas.py
app/api/: __init__.py  dlq.py  router.py
migrations/: env.py
migrations/versions/: 001_create_jobs.py
monitoring/: prometheus.yml
monitoring/grafana/: datasources.yml
monitoring/grafana/dashboards/: dashboard.yml  taskforge.json
scripts/: git_builder.py  load_test.py  rename_project.py  seed_jobs.py
tests/: conftest.py  test_api.py  test_tasks.py
worker/: __init__.py  celery_app.py  handlers.py  signals.py  tasks.py
