[project]
name = "taskforge"
version = "1.0.0"
description = "Production-grade async background job processing system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501", "B008", "E402", "UP042", "B904"]

[tool.ruff.lint.isort]
known-first-party = ["app", "worker"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
